Created button to play the memory game from home page

--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
      <a class="btn" href="#games">Games</a>
      <a class="btn" href="#seasons">Seasons</a>
      <a class="btn" href="#nfts">NFT Booster Packs</a>
-     <a class="btn primary" href="#play">Play Now</a>
+     <a class="btn primary" href="./memory-match.html">Play Now</a>
     </div>
    </div>
   </header>
@@ -96,7 +96,7 @@
     <h1>Unwind with relaxing mini‑games under a virtual canopy</h1>
     <p class="sub">A calm gaming portal focused on wellness and gentle challenge. Earn daily points while playing. Spend them on seasonal NFT booster packs created by independent artists.</p>
     <div class="cta">
-     <a class="btn primary" href="#play">Start Playing</a>
+     <a class="btn primary" href="./memory-match.html">Start Playing</a>
      <a class="btn" href="#learn">Learn More</a>
     </div>
     <div class="cards">
@@ -131,6 +131,8 @@
        <li><span class="dot"></span>Zen Trails — A gentle pathfinding puzzler with soft soundscapes.</li>
        <li><span class="dot"></span>Leaf Drift — Guide leaves on a stream; no timers, just flow.</li>
        <li><span class="dot"></span>Stargaze — Connect constellations at your own pace.</li>
+     <li><a class="btn primary" href="./memory-match.html">Play Memory Match</a>
+      <li href="./memory-match.html"><span class="dot"></span>Memory Match — Match pairs of cards to earn points.</li>
       </ul>
      </div>
      <div class="panel">
@@ -176,7 +178,7 @@
       <h2>Get started</h2>
       <p class="sub">Create an account, play a relaxing game, and claim your first daily points.</p>
       <div class="cta">
-       <a id="play" class="btn primary" href="#">Play a demo</a>
+       <a id="play" class="btn primary" href="./memory-match.html">Play a demo</a>
        <a class="btn" href="#">Create account</a>
       </div>
      </div>
@@ -186,7 +188,7 @@
 
   <footer>
    <div class="container">
-    <div>© <span id="year"></span> Gaming Under The Trees · Calm gaming, kind community</div>
+    <div>  Gaming Under The Trees · Calm gaming, kind community</div>
     <div style="margin-top:8px; font-size: 13px;">Built for relaxation. Feedback? <a href="mailto:hello@example.com">hello@example.com</a></div>
    </div>
   </footer>
