added button on home page to be able to access the zen trails game, corrected home page name on the zen trails page

--- a/home.html
+++ b/home.html
@@ -128,6 +128,7 @@
      <div class="panel">
       <h2>Featured Games</h2>
       <ul class="list">
+       <li><a class="btn primary" href="./zen-trails.html">Play Zen Trails</a>
        <li><span class="dot"></span>Zen Trails — A gentle pathfinding puzzler with soft soundscapes.</li>
        <li><span class="dot"></span>Leaf Drift — Guide leaves on a stream; no timers, just flow.</li>
        <li><span class="dot"></span>Stargaze — Connect constellations at your own pace.</li>
