--- a/zen-trails.html
+++ b/zen-trails.html
@@ -67,7 +67,7 @@
     <header>
       <a class="brand" href="./home.html" aria-label="Back to Home">
         <div class="logo" aria-hidden="true"></div>
-        <div>Zen Trails</div>
+        <div>Gaming Under The Trees</div>
       </a>
       <div class="toolbar">
         <select id="size" class="select" aria-label="Board size">
